--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-#"aquatone" doeas the all work! this script just for automatisation
+#"aquatone" does all the work! this script just for automatisation
 #I just added few lines based on my own style
 #hope you like it!
 #
